feat: Implementacion del adapter al simulador pool y capacidad de realizar transacciones